force-app/main/default/objects/Service_Status_Time_Log__c/Service_Status_Time_Log__c.object-meta.xml
<CustomObject>
    <label>Service Status Time Log</label>
    <nameField>
        <label>Service Status Time Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Status Time Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>