force-app/main/default/objects/Service_Status_Time_Log__c/fields/End_Status__c.field-meta.xml
<CustomField>
    <fullName>End_Status__c</fullName>
    <label>End Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>