force-app/main/default/objects/Service_Status_Time_Log__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Service Status Time Logs</relationshipLabel>
    <relationshipName>Service_Status_Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>