force-app/main/default/objects/Service_Status_Time_Log__c/fields/Start_Status__c.field-meta.xml
<CustomField>
    <fullName>Start_Status__c</fullName>
    <label>Start Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>